--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "safeschool-ready-spark",
+  "name": "suraksha",
   "private": true,
   "version": "1.0.0",
   "description": "Digital Disaster Preparedness Platform for Educational Institutions",
