--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Get your API key from: https://makersuite.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
+# OpenWeatherMap Configuration
+# Get your API key from: https://openweathermap.org/api
+VITE_OPENWEATHER_API_KEY=your_openweather_api_key_here
+
 # Application Configuration
 VITE_APP_NAME=Suraksha
 VITE_APP_VERSION=1.0.0
